--- a/resume.html
+++ b/resume.html
@@ -52,7 +52,7 @@ Gavin Harl
 </ul>
 </nav>
 <h1>Resume</h1>
-<img src="ResumePic.png" alt="Resume">
+<a href="Resume.pdf">Resume</a>
 </div>
 </body>
 </html>
